# invoice_gen

./: .gitignore  invoice_data.toml  invoice_gen.py  main.py  post_build.py  pyproject.toml  readme.md
templates/: template_01.css  template_01.html
