[tool.poetry]
name = "invoice-gen"
version = "0.1.0"
description = ""
authors = ["Dhruvajyoti Sarma <onlinedhruva71@gmail.com>"]
readme = "README.md"
packages = [{include = "invoice_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
pdfkit = "^1.0.0"
jinja2 = "^3.1.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
